# F407_lvgl_1

./: .gitignore  .mxproject  CMakeLists.txt  F407_lvgl_1.ioc  Openocd_F407ZGT6_ST_LINK.cfg  Prj_log.md  STM32F407XX_FLASH.ld  openocd_F407ZGT6.cfg  startup_stm32f407xx.s  设置要求.md
BSP/: CMakeLists.txt
BSP/24CXX/: 24cxx.c  24cxx.h
BSP/DHT11/: dht11.c  dht11.h
BSP/IIC/: myiic.c  myiic.h
BSP/KEY/: key.c  key.h
BSP/LCD/: lcd.c  lcd.h  lcd_ex.c  lcd_ex.h
BSP/LED/: led.c  led.h
BSP/SPI/: spi.h
BSP/SRAM/: sram.c  sram.h
BSP/TOUCH/: ctiic.c  ctiic.h  gt9xxx.c  gt9xxx.h  touch.c  touch.h
BSP/delay/: delay.c  delay.h
Core/Inc/: FreeRTOSConfig.h  dma.h  fsmc.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usart.h
Core/Src/: adc.c  dma.c  freertos.c  fsmc.c  gpio.c  main.c  stm32f4xx_it.c  usart.c
MDK-ARM/: F407_lvgl_1.uvguix.lzn16  F407_lvgl_1.uvoptx  F407_lvgl_1.uvprojx  startup_stm32f407xx.lst
MDK-ARM/F407_lvgl_1/: F407_lvgl_1.build_log.htm  F407_lvgl_1_F407_lvgl_1.dep  cmsis_os2.crf  cmsis_os2.d  croutine.crf  croutine.d  event_groups.crf  event_groups.d  freertos.d  fsmc.d  gpio.d  heap_4.crf  heap_4.d  i2c.d  list.crf  list.d  main.d  port.crf  port.d  queue.crf  queue.d  spi.d  startup_stm32f407xx.d  stm32f4xx_hal.crf  stm32f4xx_hal.d  stm32f4xx_hal_cortex.crf  stm32f4xx_hal_cortex.d  stm32f4xx_hal_dma.crf  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.crf  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_exti.crf  stm32f4xx_hal_exti.d  stm32f4xx_hal_flash.crf  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.crf  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_flash_ramfunc.crf  stm32f4xx_hal_flash_ramfunc.d  stm32f4xx_hal_gpio.crf  (+41 more)
MDK-ARM/RTE/_F407_lvgl_1/: RTE_Components.h
Middlewares/lvgl/: CMakeLists.txt  lv_conf.h  ui_custom.c  ui_custom.h
Middlewares/lvgl/demos/: cmake_install.cmake  project.info  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c
Middlewares/lvgl/demos/components/: ui_comp_hook.c
Middlewares/lvgl/demos/screens/: ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h  ui_Screen3.c  ui_Screen3.h
Middlewares/lvgl/examples/porting/: lv_port_disp.c  lv_port_indev.c
Middlewares/lvgl/src/extra/widgets/animimg/: lv_animimg.h
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
